--- a/Veritaware.Toolkits.CWEL/Veritaware.Toolkits.CWEL.vcxproj
+++ b/Veritaware.Toolkits.CWEL/Veritaware.Toolkits.CWEL.vcxproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <ClInclude Include="color.h" />
     <ClInclude Include="hashing.h" />
+    <ClInclude Include="property.h" />
     <ClInclude Include="shortns.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="streaming.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="color.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="hashing.cpp" />
+    <ClCompile Include="property.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
