--- a/Veritaware.Toolkits.CWEL/Veritaware.Toolkits.CWEL.vcxproj.filters
+++ b/Veritaware.Toolkits.CWEL/Veritaware.Toolkits.CWEL.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="shortns.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="property.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="color.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="property.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
