--- a/Veritaware.Toolkits.CWEL/Veritaware.Toolkits.CWEL.vcxproj.filters
+++ b/Veritaware.Toolkits.CWEL/Veritaware.Toolkits.CWEL.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="property.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="object.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
